remove input solutions and some notes

--- a/2024/README
+++ b/2024/README
@@ -3,3 +3,9 @@
 Changing go for python this year :D
 
 https://adventofcode.com/2024
+
+## year tips/conditions
+
+- samples and intermediate tests are ok for troubleshooting, but unless you need them go straight for final feedback ASAP
+- using chatgpt is ok, as long as prompts are for  python helpers, not algorithms or general resolutions
+- respect aoc rules on public repos; delete/encrypt inputs + don't put input solutions
